Generate welcome controller, work on editing views

--- a/app/views/coaches/_form.html.erb
+++ b/app/views/coaches/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
+    <%= f.label :klass, "Class" %><br>
+    <%= f.text_field :klass %>
   </div>
   <div class="field">
     <%= f.label :model %><br>
