--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -1,8 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @coach.type %>
+  <strong>Coach ID:</strong>
+  <%= @coach.id %>
+</p>
+
+<p>
+  <strong>Class:</strong>
+  <%= @coach.klass %>
 </p>
 
 <p>
