--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -14,7 +14,7 @@
 
   <tbody>
     <% @drivers.each do |driver| %>
-      <tr>
+      <tr id="<%= driver.name %>">
         <td><%= driver.name %></td>
         <td><%= driver.email %></td>
         <td><%= driver.preference %></td>
