--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<div>
+  <%= link_to "Drivers", drivers_path %> |
+  <%= link_to "Coaches", coaches_path %> |
+  <%= link_to "Assignments", assignments_path %>
+</div>
+
 <%= yield %>
 
 </body>
