--- a/app/views/coaches/index.html.erb
+++ b/app/views/coaches/index.html.erb
@@ -5,7 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Type</th>
+      <th>Coach ID</th>
+      <th>Class</th>
       <th>Model</th>
       <th>Year</th>
       <th colspan="3"></th>
@@ -14,8 +15,9 @@
 
   <tbody>
     <% @coaches.each do |coach| %>
-      <tr>
-        <td><%= coach.type %></td>
+      <tr id="<%= coach.id %>">
+        <td><%= coach.id %></td>
+        <td><%= coach.klass %></td>
         <td><%= coach.model %></td>
         <td><%= coach.year %></td>
         <td><%= link_to 'Show', coach %></td>
