--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Driver:</strong>
-  <%= @assignment.driver %>
+  <%= @assignment.driver.name %>
 </p>
 
 <p>
   <strong>Coach:</strong>
-  <%= @assignment.coach %>
+  <%= @assignment.coach.id %>
 </p>
 
 <p>
