--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -15,5 +15,15 @@
   <%= @driver.preference %>
 </p>
 
+<p>
+  <strong>Upcoming Assignments:</strong><br>
+  <% @assignments.each do |assignment| %>
+    <%= assignment.coach.id %> |
+    <%= assignment.route %> |
+    <%= assignment.start_time %> |
+    <%= assignment.end_time %>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_driver_path(@driver) %> |
 <%= link_to 'Back', drivers_path %>
